--- a/main.html
+++ b/main.html
@@ -19,13 +19,14 @@
   <header class="navbar" data-aos="fade-down">
     <div class="container nav-inner">
       <a href="#" class="brand">NexTech</a>
-      <nav class="nav-links">
-        <a href="#empresa">Empresa</a>
-        <a href="#servicios">Servicios</a>
-        <a href="#valores">Valores</a>
-        <a href="#equipo">Equipo</a>
-        <a href="#contacto">Contacto</a>
-      </nav>
+      <nav id="primaryNav" class="nav-links" aria-label="Navegación principal">
+        <a href="main.html#empresa">Empresa</a>
+        <a href="main.html#servicios">Servicios</a>
+        <a href="proyectos.html">Proyectos</a>
+        <a href="main.html#valores">Valores</a>
+        <a href="main.html#equipo">Equipo</a>
+        <a href="main.html#contacto" class="nav-cta">Contacto</a>
+</nav>
     </div>
   </header>
 
@@ -107,8 +108,6 @@
     </ul>
   </div>
 </section>
-
-
     <!-- Valores -->
     <section id="valores" class="section bg-light" data-aos="fade-left">
       <div class="container">
@@ -186,6 +185,22 @@
     anchorPlacement: 'top-bottom'
   });
   window.addEventListener('load', () => AOS.refreshHard());
+</script>
+
+<script>
+  // Filtros de proyectos
+  const chips = document.querySelectorAll('.chip');
+  const cards = document.querySelectorAll('.project-card');
+
+  chips.forEach(chip => chip.addEventListener('click', () => {
+    chips.forEach(c => c.classList.remove('is-active'));
+    chip.classList.add('is-active');
+    const f = chip.dataset.filter;
+    cards.forEach(card => {
+      const show = f === 'all' || card.dataset.cat.includes(f);
+      card.style.display = show ? '' : 'none';
+    });
+  }));
 </script>
 
 </body>
