--- a/main.html
+++ b/main.html
@@ -31,17 +31,18 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero">
-    <div class="hero-content">
-      <div class="hero-logo-wrapper" data-aos="zoom-in" data-aos-duration="1200">
-        <img src="NexTech.jpg" alt="Logo NexTech" class="hero-logo" />
-      </div>
-      <h1 class="hero-title" data-aos="fade-down" data-aos-delay="300">NexTech</h1>
-      <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="500">
-        Conectamos personas, dispositivos y procesos con software IoT seguro y escalable.
-      </p>
+  <section class="hero" style="min-height: 40vh;">
+  <div class="hero-content">
+    <div class="hero-logo-wrapper" data-aos="zoom-in">
+      <img src="NexTech.jpg" alt="Logo NexTech" class="hero-logo" style="width:min(40vw,220px);" />
     </div>
-  </section>
+    <h1 class="hero-title">Proyectos & Avances</h1>
+    <p class="hero-subtitle">Explora los desarrollos en curso dentro de NexTech.</p>
+    <div class="hero-actions">
+      <a class="btn btn-ghost" href="main.html#servicios">← Volver a Servicios</a>
+    </div>
+  </div>
+</section>
 
   <main>
     <!-- Empresa -->
