--- a/proyectos.html
+++ b/proyectos.html
@@ -62,8 +62,6 @@
           <button class="chip is-active" data-filter="all" aria-selected="true">Todos</button>
           <button class="chip" data-filter="iot">IoT</button>
           <button class="chip" data-filter="web">Web</button>
-          <button class="chip" data-filter="api">APIs</button>
-          <button class="chip" data-filter="data">Data/BI</button>
         </div>
 
         <div class="projects-grid">
@@ -73,7 +71,7 @@
               <h3 class="project-title">Plataforma IoT para Monitoreo Industrial</h3>
               <span class="status-badge status-enprogreso">En progreso</span>
             </header>
-            <p class="project-desc">Ingesta desde sensores Modbus/LoRaWAN, panel en tiempo real, alertas y control.</p>
+            <p class="project-desc">Aplicación para orquestación de Objetos inteligentes con estructura en microservicios.</p>
             <div class="progress"><div class="progress-bar" style="--pct:68%"><span class="progress-label">68%</span></div></div>
             <ul class="tags"><li>#IoT</li><li>#TiempoReal</li><li>#Seguridad</li></ul>
             <div class="project-actions">
@@ -91,19 +89,6 @@
             <ul class="tags"><li>#WebApp</li><li>#APIs</li><li>#UX</li></ul>
             <div class="project-actions">
               <a class="btn btn-ghost" href="#" aria-disabled="true">Demo (pronto)</a>
-            </div>
-          </article>
-
-          <article class="project-card" data-cat="data" data-aos="zoom-in" data-aos-delay="200">
-            <header class="project-head">
-              <h3 class="project-title">Tableros de Analítica Operativa</h3>
-              <span class="status-badge status-plan">En planificación</span>
-            </header>
-            <p class="project-desc">KPIs de mantenimiento, pronóstico de fallas y optimización de consumos (ETL).</p>
-            <div class="progress"><div class="progress-bar" style="--pct:25%"><span class="progress-label">25%</span></div></div>
-            <ul class="tags"><li>#Data</li><li>#BI</li><li>#ETL</li></ul>
-            <div class="project-actions">
-              <a class="btn btn-ghost" href="#" aria-disabled="true">Ver tablero (pronto)</a>
             </div>
           </article>
         </div>
