--- a/proyectos.html
+++ b/proyectos.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Proyectos — NexTech</title>
 
-  <meta name="description" content="Proyecto IoT en Raspberry con arquitectura de microservicios: origen, motivación y tecnologías utilizadas." />
+  <meta name="description" content="Proyecto IoT en Raspberry con arquitectura de microservicios: origen académico, motivación técnica y stack." />
   <meta property="og:title" content="Proyectos — NexTech">
-  <meta property="og:description" content="Proyecto IoT en Raspberry con microservicios. Conoce el origen (tesis), la motivación técnica y el stack.">
+  <meta property="og:description" content="Proyecto IoT en Raspberry con microservicios y portabilidad hacia ESP32.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="NexTech.jpg">
   <meta name="twitter:card" content="summary_large_image">
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+  <!-- Estilos globales del sitio -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,6 +26,11 @@
   <header class="navbar">
     <div class="container nav-inner">
       <a href="main.html#top" class="brand">NexTech</a>
+
+      <button class="hamburger" id="menuToggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="primaryNav">
+        <span></span><span></span><span></span>
+      </button>
+
       <nav id="primaryNav" class="nav-links" aria-label="Navegación principal">
         <a href="main.html#empresa">Empresa</a>
         <a href="main.html#servicios">Servicios</a>
@@ -37,13 +43,13 @@
   </header>
 
   <!-- Hero -->
-  <section class="hero" style="min-height: 40vh;">
+  <section class="hero" style="min-height:40vh;">
     <div class="hero-content">
       <div class="hero-logo-wrapper" data-aos="zoom-in">
-        <img src="NexTech.jpg" alt="Logo NexTech" class="hero-logo" style="width:min(40vw,220px);" />
+        <img src="NexTech.jpg" alt="Logo NexTech" class="hero-logo" />
       </div>
       <h1 class="hero-title">Proyecto IoT en Raspberry</h1>
-      <p class="hero-subtitle">Arquitectura en microservicios, portable hasta dispositivos como la ESP32.</p>
+      <p class="hero-subtitle">Arquitectura en microservicios con portabilidad hacia dispositivos como la ESP32.</p>
       <div class="hero-actions">
         <a class="btn btn-ghost" href="main.html#servicios">← Volver a Servicios</a>
       </div>
@@ -62,9 +68,9 @@
             </header>
 
             <p class="project-desc">
-              Plataforma IoT desplegada en <strong>Raspberry Pi</strong> que orquesta objetos inteligentes
-              (sensores/actuadores) mediante servicios desacoplados. El diseño por microservicios permite
-              ejecutar componentes de forma independiente —incluyendo variantes ligeras aptas para <strong>ESP32</strong>.
+              Plataforma IoT desplegada en <strong>Raspberry Pi</strong> que orquesta sensores y actuadores mediante
+              servicios desacoplados. El diseño por microservicios permite ejecutar componentes de forma independiente,
+              incluyendo variantes ligeras aptas para <strong>ESP32</strong>.
             </p>
 
             <!-- Avance -->
@@ -74,15 +80,13 @@
               </div>
             </div>
 
-            <!-- Meta / Resumen -->
             <div class="project-body">
               <section class="block" data-aos="fade-up" data-aos-delay="50">
                 <h3>De dónde nace</h3>
                 <p>
-                  El proyecto surge como <strong>tesis de estudiantes</strong> orientada a crear una solución IoT modular
-                  para monitoreo y control en tiempo real. La meta inicial fue validar una arquitectura
-                  extensible que facilite pruebas rápidas en laboratorio (Raspberry Pi) y posterior
-                  despliegue en hardware embebido de bajo consumo.
+                  El proyecto surge como <strong>tesis de estudiantes</strong> con el objetivo de construir una solución IoT
+                  modular para monitoreo y control en tiempo real. Se prioriza la prueba rápida en laboratorio (Raspberry Pi)
+                  y la portabilidad hacia hardware embebido de bajo consumo para despliegues en campo.
                 </p>
               </section>
 
@@ -90,11 +94,11 @@
                 <h3>¿Por qué microservicios?</h3>
                 <ul class="meta">
                   <li><strong>Portabilidad hacia ESP32:</strong> separar funciones en servicios pequeños permite crear
-                    <em>builds</em> ligeras (solo lo necesario) para ejecutarse en la ESP32 o cerca del borde.</li>
-                  <li><strong>Escalabilidad y resiliencia:</strong> cada servicio se despliega y escala de manera
-                    independiente, evitando cuellos de botella del monolito.</li>
-                  <li><strong>Mantenibilidad:</strong> dominios bien definidos (ingesta, reglas, notificaciones, APIs),
-                    ciclos de vida y stacks diferentes sin interferir.</li>
+                    builds ligeras (solo lo necesario) para ejecutarse en la ESP32 o en el borde.</li>
+                  <li><strong>Escalabilidad y resiliencia:</strong> cada servicio se despliega y escala de forma independiente,
+                    evitando cuellos de botella del monolito.</li>
+                  <li><strong>Mantenibilidad:</strong> dominios bien definidos (ingesta, reglas, notificaciones, APIs)
+                    permiten ciclos de vida y stacks diferentes sin interferir.</li>
                 </ul>
               </section>
 
@@ -102,12 +106,12 @@
                 <h3>Tecnologías utilizadas</h3>
                 <ul class="stack">
                   <li><strong>Hardware:</strong> Raspberry Pi (gateway), sensores/actuadores; destino ligero: <strong>ESP32</strong>.</li>
-                  <li><strong>Mensajería:</strong> MQTT (broker), tópicos por dispositivo/servicio.</li>
-                  <li><strong>Back-end (servicios):</strong> Java/Spring Boot y/o Python (FastAPI) en contenedores.</li>
-                  <li><strong>Persistencia:</strong> PostgreSQL / SQLite según despliegue.</li>
-                  <li><strong>Orquestación:</strong> Docker Compose (desarrollo) y opción a K3s/Kubernetes (escala).</li>
-                  <li><strong>Observabilidad:</strong> logs estructurados, métricas y panel básico de eventos.</li>
-                  <li><strong>Front:</strong> app web para estado de dispositivos y reglas.</li>
+                  <li><strong>Mensajería:</strong> <strong>MQTT</strong> como broker; tópicos por dispositivo/servicio.</li>
+                  <li><strong>Back-end (servicios):</strong> <strong>Java/Spring Boot</strong> y/o <strong>Python/FastAPI</strong> en contenedores.</li>
+                  <li><strong>Persistencia:</strong> PostgreSQL en gateway; SQLite/archivo en despliegues edge.</li>
+                  <li><strong>Orquestación:</strong> Docker Compose (dev) con miras a K3s/Kubernetes para escalar.</li>
+                  <li><strong>Observabilidad:</strong> logs estructurados, métricas básicas y tablero de eventos.</li>
+                  <li><strong>Front:</strong> app web para estado de dispositivos, reglas y control.</li>
                 </ul>
                 <ul class="tags">
                   <li>#IoT</li><li>#Microservicios</li><li>#MQTT</li><li>#RaspberryPi</li><li>#ESP32</li>
@@ -117,24 +121,20 @@
               <section class="block" data-aos="fade-up" data-aos-delay="200">
                 <h3>Prototipo funcional</h3>
                 <p>
-                  A continuación se muestra una fotografía del prototipo implementado en laboratorio.
-                  El sistema utiliza una <strong>Raspberry Pi</strong> como nodo principal, con sensores,
-                  actuadores y módulos de comunicación coordinados mediante microservicios.
+                  Fotografía del prototipo implementado en laboratorio. El sistema utiliza una <strong>Raspberry Pi</strong>
+                  como nodo principal, con sensores, actuadores y módulos de comunicación coordinados mediante microservicios.
                 </p>
-
                 <figure class="project-image">
                   <img src="imagen_Proyecto.jpg" alt="Prototipo IoT con Raspberry Pi y microservicios de NexTech" loading="lazy" />
-                  <figcaption>
-                    Prototipo de aplicación IoT con estructura en microservicios, desarrollado como parte de la tesis de estudiantes NexTech.
-                  </figcaption>
+                  <figcaption>Prototipo de aplicación IoT con estructura en microservicios, desarrollado como parte de la tesis de estudiantes.</figcaption>
                 </figure>
               </section>
 
-              <section class="block" data-aos="fade-up" data-aos-delay="200">
+              <section class="block" data-aos="fade-up" data-aos-delay="250">
                 <h3>Arquitectura (vista rápida)</h3>
                 <ul class="meta">
                   <li><strong>Device Agent:</strong> cliente MQTT en el borde (Raspberry/ESP32) para publicar telemetría y recibir comandos.</li>
-                  <li><strong>Ingesta:</strong> servicio que normaliza mensajes y valida esquema.</li>
+                  <li><strong>Ingesta:</strong> servicio que normaliza mensajes y valida esquemas.</li>
                   <li><strong>Reglas/Alerts:</strong> evaluación de umbrales y disparo de notificaciones.</li>
                   <li><strong>API Gateway:</strong> expone endpoints para UI e integraciones.</li>
                   <li><strong>UI Web:</strong> tablero de dispositivos, eventos y control básico.</li>
@@ -143,9 +143,7 @@
             </div>
 
             <div class="project-actions">
-              <a class="btn btn-primary" href="mailto:contacto@nextech.com?subject=Proyecto%20IoT%20NexTech&body=Quiero%20saber%20m%C3%A1s%20del%20proyecto%20IoT%20en%20Raspberry.">
-                Solicitar información
-              </a>
+              <a class="btn btn-primary" href="mailto:contacto@nextech.com?subject=Proyecto%20IoT%20NexTech&body=Quiero%20saber%20m%C3%A1s%20del%20proyecto%20IoT%20en%20Raspberry.">Solicitar información</a>
               <a class="btn btn-ghost" href="README.md">README (notas del proyecto)</a>
             </div>
           </article>
@@ -162,8 +160,24 @@
 
   <button id="scrollTopBtn" aria-label="Volver arriba" title="Volver arriba">↑</button>
 
+  <!-- Scripts mínimos para esta página -->
   <script>
+    // Año en footer
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Menú móvil
+    const menuBtn = document.getElementById('menuToggle');
+    const nav = document.getElementById('primaryNav');
+    menuBtn.addEventListener('click', () => {
+      const open = nav.classList.toggle('open');
+      menuBtn.setAttribute('aria-expanded', String(open));
+    });
+    nav.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
+      nav.classList.remove('open');
+      menuBtn.setAttribute('aria-expanded', 'false');
+    }));
+
+    // Scroll-to-top
     const btn = document.getElementById('scrollTopBtn');
     window.addEventListener('scroll', () => {
       if (window.scrollY > 400) btn.classList.add('visible'); else btn.classList.remove('visible');
