--- a/main.html
+++ b/main.html
@@ -19,14 +19,16 @@
   <header class="navbar" data-aos="fade-down">
     <div class="container nav-inner">
       <a href="#" class="brand">NexTech</a>
-      <nav id="primaryNav" class="nav-links" aria-label="Navegación principal">
-        <a href="main.html#empresa">Empresa</a>
-        <a href="main.html#servicios">Servicios</a>
-        <a href="proyectos.html">Proyectos</a>
-        <a href="main.html#valores">Valores</a>
-        <a href="main.html#equipo">Equipo</a>
-        <a href="main.html#contacto" class="nav-cta">Contacto</a>
-</nav>
+        <nav id="primaryNav" class="nav-links" aria-label="Navegación principal">
+          <a href="main.html#empresa">Empresa</a>
+          <a href="main.html#servicios">Servicios</a>
+          <a href="proyectos.html">Proyectos</a>
+          <a href="simulacion.html">Simulación</a>
+          <a href="main.html#valores">Valores</a>
+          <a href="main.html#equipo">Equipo</a>
+          <a href="main.html#contacto" class="nav-cta">Contacto</a>
+        </nav>
+
     </div>
   </header>
 
